--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
   url_launcher_android: 6.0.27
   url_launcher_ios: 6.1.4
   url_launcher_platform_interface: 2.1.2
-  flutterflow: ^0.1.1
+  flutterflow_ui: 0.2.0
 
 
 dev_dependencies:
